Resample audio to enhance ASR

--- a/ASR/wav2vec2.ipynb
+++ b/ASR/wav2vec2.ipynb
@@ -22,8 +22,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
    "id": "75debb67eed3825d",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-18T13:31:18.006395Z",
+     "start_time": "2024-04-18T13:31:17.986930Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available input devices:\n",
+      "{'index': 0, 'structVersion': 2, 'name': 'Microsoft Sound Mapper - Input', 'hostApi': 0, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.09, 'defaultLowOutputLatency': 0.09, 'defaultHighInputLatency': 0.18, 'defaultHighOutputLatency': 0.18, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 1, 'structVersion': 2, 'name': 'Microphone (3- SteelSeries Arct', 'hostApi': 0, 'maxInputChannels': 1, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.09, 'defaultLowOutputLatency': 0.09, 'defaultHighInputLatency': 0.18, 'defaultHighOutputLatency': 0.18, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 2, 'structVersion': 2, 'name': 'Microphone (High Definition Aud', 'hostApi': 0, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.09, 'defaultLowOutputLatency': 0.09, 'defaultHighInputLatency': 0.18, 'defaultHighOutputLatency': 0.18, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 3, 'structVersion': 2, 'name': 'Microphone (Steam Streaming Mic', 'hostApi': 0, 'maxInputChannels': 8, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.09, 'defaultLowOutputLatency': 0.09, 'defaultHighInputLatency': 0.18, 'defaultHighOutputLatency': 0.18, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 4, 'structVersion': 2, 'name': 'Microphone (HD Pro Webcam C920)', 'hostApi': 0, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.09, 'defaultLowOutputLatency': 0.09, 'defaultHighInputLatency': 0.18, 'defaultHighOutputLatency': 0.18, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 5, 'structVersion': 2, 'name': 'Headset Microphone (Oculus Virt', 'hostApi': 0, 'maxInputChannels': 1, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.09, 'defaultLowOutputLatency': 0.09, 'defaultHighInputLatency': 0.18, 'defaultHighOutputLatency': 0.18, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 14, 'structVersion': 2, 'name': 'Primary Sound Capture Driver', 'hostApi': 1, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.12, 'defaultLowOutputLatency': 0.0, 'defaultHighInputLatency': 0.24, 'defaultHighOutputLatency': 0.0, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 15, 'structVersion': 2, 'name': 'Microphone (3- SteelSeries Arctis 1 Wireless)', 'hostApi': 1, 'maxInputChannels': 1, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.12, 'defaultLowOutputLatency': 0.0, 'defaultHighInputLatency': 0.24, 'defaultHighOutputLatency': 0.0, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 16, 'structVersion': 2, 'name': 'Microphone (High Definition Audio Device)', 'hostApi': 1, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.12, 'defaultLowOutputLatency': 0.0, 'defaultHighInputLatency': 0.24, 'defaultHighOutputLatency': 0.0, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 17, 'structVersion': 2, 'name': 'Microphone (Steam Streaming Microphone)', 'hostApi': 1, 'maxInputChannels': 8, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.12, 'defaultLowOutputLatency': 0.0, 'defaultHighInputLatency': 0.24, 'defaultHighOutputLatency': 0.0, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 18, 'structVersion': 2, 'name': 'Microphone (HD Pro Webcam C920)', 'hostApi': 1, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.12, 'defaultLowOutputLatency': 0.0, 'defaultHighInputLatency': 0.24, 'defaultHighOutputLatency': 0.0, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 19, 'structVersion': 2, 'name': 'Headset Microphone (Oculus Virtual Audio Device)', 'hostApi': 1, 'maxInputChannels': 1, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.12, 'defaultLowOutputLatency': 0.0, 'defaultHighInputLatency': 0.24, 'defaultHighOutputLatency': 0.0, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 35, 'structVersion': 2, 'name': 'Microphone (High Definition Audio Device)', 'hostApi': 2, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.0029024999999999997, 'defaultLowOutputLatency': 0.0, 'defaultHighInputLatency': 0.0101587, 'defaultHighOutputLatency': 0.0, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 36, 'structVersion': 2, 'name': 'Microphone (3- SteelSeries Arctis 1 Wireless)', 'hostApi': 2, 'maxInputChannels': 1, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.003, 'defaultLowOutputLatency': 0.0, 'defaultHighInputLatency': 0.01, 'defaultHighOutputLatency': 0.0, 'defaultSampleRate': 48000.0}\n",
+      "{'index': 37, 'structVersion': 2, 'name': 'Microphone (Steam Streaming Microphone)', 'hostApi': 2, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.003, 'defaultLowOutputLatency': 0.0, 'defaultHighInputLatency': 0.01, 'defaultHighOutputLatency': 0.0, 'defaultSampleRate': 48000.0}\n",
+      "{'index': 38, 'structVersion': 2, 'name': 'Microphone (HD Pro Webcam C920)', 'hostApi': 2, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.003, 'defaultLowOutputLatency': 0.0, 'defaultHighInputLatency': 0.01, 'defaultHighOutputLatency': 0.0, 'defaultSampleRate': 16000.0}\n",
+      "{'index': 39, 'structVersion': 2, 'name': 'Headset Microphone (Oculus Virtual Audio Device)', 'hostApi': 2, 'maxInputChannels': 1, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.003, 'defaultLowOutputLatency': 0.0, 'defaultHighInputLatency': 0.01, 'defaultHighOutputLatency': 0.0, 'defaultSampleRate': 48000.0}\n",
+      "{'index': 40, 'structVersion': 2, 'name': 'Microphone (HD Audio Mixed capture)', 'hostApi': 3, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.01, 'defaultLowOutputLatency': 0.01, 'defaultHighInputLatency': 0.04, 'defaultHighOutputLatency': 0.04, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 45, 'structVersion': 2, 'name': 'SteelSeries Sonar - Stream (SteelSeries_Sonar_VAD Stream Wave)', 'hostApi': 3, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.01, 'defaultLowOutputLatency': 0.01, 'defaultHighInputLatency': 0.04, 'defaultHighOutputLatency': 0.04, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 47, 'structVersion': 2, 'name': 'SteelSeries Sonar - Microphone (SteelSeries_Sonar_VAD Chat Capture Wave)', 'hostApi': 3, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.01, 'defaultLowOutputLatency': 0.01, 'defaultHighInputLatency': 0.04, 'defaultHighOutputLatency': 0.04, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 52, 'structVersion': 2, 'name': 'Microphone (Steam Streaming Microphone Wave)', 'hostApi': 3, 'maxInputChannels': 8, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.01, 'defaultLowOutputLatency': 0.01, 'defaultHighInputLatency': 0.08533333333333333, 'defaultHighOutputLatency': 0.08533333333333333, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 54, 'structVersion': 2, 'name': 'Microphone (HD Pro Webcam C920)', 'hostApi': 3, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.01, 'defaultLowOutputLatency': 0.01, 'defaultHighInputLatency': 0.08533333333333333, 'defaultHighOutputLatency': 0.08533333333333333, 'defaultSampleRate': 32000.0}\n",
+      "{'index': 55, 'structVersion': 2, 'name': 'Input (Steam Streaming Speakers Wave)', 'hostApi': 3, 'maxInputChannels': 8, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.01, 'defaultLowOutputLatency': 0.01, 'defaultHighInputLatency': 0.08533333333333333, 'defaultHighOutputLatency': 0.08533333333333333, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 57, 'structVersion': 2, 'name': 'Microphone (SteelSeries Arctis 1 Wireless)', 'hostApi': 3, 'maxInputChannels': 1, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.01, 'defaultLowOutputLatency': 0.01, 'defaultHighInputLatency': 0.08533333333333333, 'defaultHighOutputLatency': 0.08533333333333333, 'defaultSampleRate': 44100.0}\n",
+      "{'index': 59, 'structVersion': 2, 'name': 'Headset Microphone (OCULUSVAD Wave Microphone Headphone)', 'hostApi': 3, 'maxInputChannels': 1, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.01, 'defaultLowOutputLatency': 0.01, 'defaultHighInputLatency': 0.04, 'defaultHighOutputLatency': 0.04, 'defaultSampleRate': 48000.0}\n",
+      "{'index': 62, 'structVersion': 2, 'name': 'Input (OCULUSVAD Wave Speaker Headphone)', 'hostApi': 3, 'maxInputChannels': 2, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.01, 'defaultLowOutputLatency': 0.01, 'defaultHighInputLatency': 0.04, 'defaultHighOutputLatency': 0.04, 'defaultSampleRate': 44100.0}\n",
+      "\n",
+      "Default input device: 1\n"
+     ]
+    }
+   ],
    "source": [
     "from pyaudio import PyAudio\n",
     "\n",
@@ -38,15 +81,14 @@
     "    \n",
     "device = p.get_default_input_device_info()\n",
     "device_idx = int(device[\"index\"])\n",
+    "device_sample_rate = int(device[\"defaultSampleRate\"])\n",
     "print(\"\\nDefault input device:\", device_idx)\n",
     "p.terminate()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 68,
    "id": "652f52841419332c",
    "metadata": {
     "ExecuteTime": {
@@ -69,7 +111,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f844ed1c1224c3ead53899e7a9ff12f",
+       "model_id": "a6060c3b17cf4fe09e64a8c28603b7e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,7 +125,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b725ddb850b47afabfc48caad5f44c9",
+       "model_id": "f9d8f632f0c94b2993aee59ca839dc29",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +139,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "485946f6c6b3410c8ac1bbfe0bc39f93",
+       "model_id": "b9b9bbae7ced45a58c2e24834b14336c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,29 +157,32 @@
     "from threading import Thread, Lock\n",
     "import numpy as np\n",
     "import torch\n",
+    "import torchaudio.functional as F\n",
     "\n",
-    "from transformers import AutoModelForCTC, Wav2Vec2Processor, Wav2Vec2ProcessorWithLM\n",
+    "from transformers import AutoModelForCTC, Wav2Vec2Processor\n",
     "from queue import Queue\n",
     "from pyaudio import PyAudio, paInt16, Stream\n",
     "\n",
     "CHANNELS = 1\n",
-    "FRAME_RATE = 16000\n",
+    "SAMPLE_RATE = 16000\n",
     "RECORD_SECONDS = 30\n",
     "CHUNK = 1024\n",
     "AUDIO_FORMAT = paInt16\n",
     "SAMPLE_SIZE = 2\n",
     "MODEL_ID = \"Jzuluaga/wav2vec2-large-960h-lv60-self-en-atc-uwb-atcc-and-atcosim\"\n",
     "model = AutoModelForCTC.from_pretrained(MODEL_ID)\n",
-    "processor = Wav2Vec2ProcessorWithLM.from_pretrained(MODEL_ID) if USE_LM else Wav2Vec2Processor.from_pretrained(MODEL_ID)\n",
+    "processor = Wav2Vec2Processor.from_pretrained(MODEL_ID)\n",
     "recordings = Queue()\n",
     "output = widgets.Output()\n",
     "\n",
     "def is_buffer_full(buffer, chunk):\n",
-    "    return len(buffer) >= (FRAME_RATE * RECORD_SECONDS) / chunk\n",
+    "    return len(buffer) >= (SAMPLE_RATE * RECORD_SECONDS) / chunk\n",
     "\n",
     "def process(sample: bytes):\n",
     "    nparray = np.frombuffer(sample, dtype=np.int16).astype(np.float32) / 32767.0\n",
-    "    input_values = processor(nparray, sampling_rate=FRAME_RATE, return_tensors=\"pt\").input_values\n",
+    "    tensor = torch.from_numpy(nparray)\n",
+    "    resampled_audio = F.resample(tensor, device_sample_rate, SAMPLE_RATE).numpy()\n",
+    "    input_values = processor(resampled_audio, sampling_rate=SAMPLE_RATE, return_tensors=\"pt\").input_values\n",
     "    \n",
     "    with torch.no_grad():\n",
     "        logits = model(input_values).logits\n",
@@ -178,7 +223,7 @@
     "    stream = audio.open(\n",
     "            format=AUDIO_FORMAT,\n",
     "            channels=CHANNELS,\n",
-    "            rate=FRAME_RATE,\n",
+    "            rate=device_sample_rate,\n",
     "            frames_per_buffer=CHUNK,\n",
     "            input=True,\n",
     "            input_device_index=device_idx,\n",
