--- a/ASR/wav2vec2.ipynb
+++ b/ASR/wav2vec2.ipynb
@@ -22,13 +22,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "id": "75debb67eed3825d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T02:03:36.296865Z",
-     "start_time": "2024-04-19T02:03:36.224230Z"
+     "end_time": "2024-04-20T06:58:40.948216Z",
+     "start_time": "2024-04-20T06:58:40.815540Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default input device: {'index': 1, 'structVersion': 2, 'name': 'Microphone (3- SteelSeries Arct', 'hostApi': 0, 'maxInputChannels': 1, 'maxOutputChannels': 0, 'defaultLowInputLatency': 0.09, 'defaultLowOutputLatency': 0.09, 'defaultHighInputLatency': 0.18, 'defaultHighOutputLatency': 0.18, 'defaultSampleRate': 44100.0}\n"
+     ]
+    }
+   ],
    "source": [
     "from pyaudio import PyAudio\n",
     "\n",
@@ -44,29 +54,75 @@
     "device = p.get_default_input_device_info()\n",
     "device_idx = int(device[\"index\"])\n",
     "device_sample_rate = int(device[\"defaultSampleRate\"])\n",
-    "print(\"Default input device:\", device_idx)\n",
+    "print(\"Default input device:\", device)\n",
     "p.terminate()"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Default input device: 1\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "id": "652f52841419332c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T02:06:01.837664Z",
-     "start_time": "2024-04-19T02:05:55.475654Z"
+     "end_time": "2024-04-20T06:58:48.361893Z",
+     "start_time": "2024-04-20T06:58:42.156139Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at Jzuluaga/wav2vec2-large-960h-lv60-self-en-atc-uwb-atcc-and-atcosim were not used when initializing Wav2Vec2ForCTC: ['wav2vec2.encoder.pos_conv_embed.conv.weight_g', 'wav2vec2.encoder.pos_conv_embed.conv.weight_v']\n",
+      "- This IS expected if you are initializing Wav2Vec2ForCTC from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing Wav2Vec2ForCTC from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of Wav2Vec2ForCTC were not initialized from the model checkpoint at Jzuluaga/wav2vec2-large-960h-lv60-self-en-atc-uwb-atcc-and-atcosim and are newly initialized: ['wav2vec2.encoder.pos_conv_embed.conv.parametrizations.weight.original0', 'wav2vec2.encoder.pos_conv_embed.conv.parametrizations.weight.original1']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dcd581a18a8e4773bc66b8fd3a357edb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='Record', icon='microphone', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "271034ffd0e34c2ba481740f2b09de08",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='warning', description='Stop', icon='stop', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f2b4361eda1346c9b667cab765a0870b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -91,7 +147,8 @@
     "output = widgets.Output()\n",
     "\n",
     "def is_buffer_full(buffer, chunk):\n",
-    "    return len(buffer) >= (SAMPLE_RATE * RECORD_SECONDS) / chunk\n",
+    "    sample_size = 2\n",
+    "    return len(buffer) >= (device_sample_rate * RECORD_SECONDS) / chunk\n",
     "\n",
     "def process(sample: bytes):\n",
     "    nparray = np.frombuffer(sample, dtype=np.int16).astype(np.float32) / 32767.0\n",
@@ -152,13 +209,15 @@
     "        \n",
     "def stop_recording(data):\n",
     "    state.set_recording(False)\n",
-    "        \n",
+    "    \n",
     "# chunk defines how often we read the microphone\n",
     "def record(audio: PyAudio, stream: Stream):\n",
     "    buffer = []\n",
     "    \n",
     "    while state.is_recording():\n",
     "        data = stream.read(CHUNK, True)\n",
+    "        size = audio.get_sample_size(AUDIO_FORMAT)\n",
+    "        # print(size, len(data))\n",
     "        buffer.append(data)\n",
     "        \n",
     "        if is_buffer_full(buffer, CHUNK):\n",
@@ -187,63 +246,7 @@
     "stop_btn.on_click(stop_recording)\n",
     "\n",
     "display(record_btn, stop_btn, output)"
-   ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at Jzuluaga/wav2vec2-large-960h-lv60-self-en-atc-uwb-atcc-and-atcosim were not used when initializing Wav2Vec2ForCTC: ['wav2vec2.encoder.pos_conv_embed.conv.weight_g', 'wav2vec2.encoder.pos_conv_embed.conv.weight_v']\n",
-      "- This IS expected if you are initializing Wav2Vec2ForCTC from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing Wav2Vec2ForCTC from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of Wav2Vec2ForCTC were not initialized from the model checkpoint at Jzuluaga/wav2vec2-large-960h-lv60-self-en-atc-uwb-atcc-and-atcosim and are newly initialized: ['wav2vec2.encoder.pos_conv_embed.conv.parametrizations.weight.original0', 'wav2vec2.encoder.pos_conv_embed.conv.parametrizations.weight.original1']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Button(button_style='success', description='Record', icon='microphone', style=ButtonStyle())"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "b56d4931d1f248ca95ee7cf2bb1841b4"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Button(button_style='warning', description='Stop', icon='stop', style=ButtonStyle())"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "9cc0554dc9944124b956e0986480473a"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Output()"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "86dbebeef86e44ab834f8e101c640bcf"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "execution_count": 3
+   ]
   }
  ],
  "metadata": {
